--- a/contact.html
+++ b/contact.html
@@ -277,7 +277,7 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-12">
             <p>Copyright &copy; 2020 Safe Easy Loan Co., Ltd.
             
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">Visionsoft</a></p>
           </div>
         </div>
       </div>
@@ -305,4 +305,5 @@ https://templatemo.com/tm-545-finance-business
     </script>
 
   </body>
+
 </html>
