--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="TemplateMo">
+    <meta name="author" content="visionsoft">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
     <title>Safe Easy Loan - Contact Page</title>
@@ -307,3 +307,4 @@ https://templatemo.com/tm-545-finance-business
   </body>
 
 </html>
+
